<resources>

    <string-array name="names_of_tabs">
        <item>Избранное</item>
        <item>Понравившиеся</item>
    </string-array>


    <string name="app_name">Folu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">ID:</string>
    <string name="name">Имя:</string>
    <string name="width">width:</string>
    <string name="height">height:</string>
    <string name="nameFragment">Детальная информация</string>
    <string name="allPhotographer">Все фотографы</string>
    <string name="title_home">Дом</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="author">Автор</string>
    <string name="no_connection_message">Какой-то сверхразум всё сломал</string>
    <string name="service_unavailable">Нет интернет соеденения</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="naming_toolbar">Все фотографы</string>
    <string name="photographer_detail">Any</string>
    <string name="flying_saucer_image">Flying saucer image</string>
    <string name="errorSubtitle">Скорее всего ошибка сервера</string>
    <string name="tryAgain"><b>Попробовать снова</b></string>
    <string name="input_name">Введите имя</string>
    <string name="cancel">Отмена</string>
    <string name="all_posts">Посты</string>
    <string name="my_likes">Мое любимое</string>
    <string name="profile">Профиль</string>
    <string name="numberPhone">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="registration">Регистрация</string>
    <string name="comments">Комментарии</string>
    <string name="nameOfUser">Имя</string>
    <string name="secondNameOfUser">Фамилия</string>
    <string name="authorization">Войти</string>
    <string name="invalid_register">Ошибка регистрации, скорее всего, такой номер телефона уже зареган в базе</string>
    <string name="invalid_authorization">Ошибка авторизации, логин или пароль не верный</string>
    <string name="unknown_exception">Неизвестная ошибка</string>
    <string name="filed_to_connection_server">Невозможно подключиться к серверу, попробуйте еще раз</string>
    <string name="to_registration">Зарегестрироваться</string>
    <string name="to_authorization">Вход</string>
    <string name="please_wait">Загрузка данных, подождите</string>
    <string name="token_expired">Токен доступа истек срок действия</string>
    <string name="your_story">Ваша история</string>
    <string name="comment_hint">Коментировать..</string>
    <string name="camera">Камера</string>
    <string name="logo">Лого</string>
    <string name="direct">Директ</string>
    <string name="like">Лайк</string>
    <string name="more">Больше</string>
    <string name="comment">Комментарий</string>
    <string name="collect">Collect</string>
    <string name="close">Закрыть</string>
    <string name="home">Дом</string>
    <string name="search">Поиск</string>
    <string name="toolbar_title_gallery">Галерея</string>

    <string name="post_image">Пост картинки</string>
    <string name="view_all">View all %d comments</string>
    <string name="likes">%d likes</string>
    <string name="saved">Сохранено</string>
    <string name="save_to_collection">Посмотреть все мои избранные</string>
    <string name="learn_more">Читать больше</string>
    <string name="ic_tag_border">border</string>
    <string name="loading">Загрузка</string>
    <string name="ic_tag_fill">fill</string>
    <string name="profile_text">Шла саша по саше и сосала сушку</string>
    <string name="favourite">Избранное</string>
    <string name="my_like">Мне понравилось</string>
    <string name="empty_list">Пустой список</string>
</resources>