<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="398dp"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/tvErrorTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/no_connect"
        android:contentDescription="@string/flying_saucer_image" />

    <TextView
        android:id="@+id/tvErrorTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="1sp"
        android:text="@string/no_connection_message"
        android:textAppearance="@style/ErrorTitleStyle"
        android:textStyle="bold"
        android:translationY="-0.71sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvErrorSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="1sp"
        android:text="@string/errorSubtitle"
        android:textAppearance="@style/ErrorTitleStyleTwo"
        android:translationY="-0.32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvErrorTitle" />

    <TextView
        android:id="@+id/update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="1sp"
        android:text="@string/tryAgain"
        android:textAppearance="@style/ErrorActionStyle"
        android:translationY="-0.32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvErrorSubtitle" />

</androidx.constraintlayout.widget.ConstraintLayout>